[project]
name = "trial-dspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.3",
]

[tool.ruff]
line-length = 120
ignore = [
    'B008'
]

[tool.ruff.lint]
select = ['B', 'SIM', 'I']

[tool.ruff.format]
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
